fix bad styling on mobile for results settings update

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -614,14 +614,14 @@ video {
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
+.col-start-1 {
+  grid-column-start: 1;
+}
 .col-start-5 {
   grid-column-start: 5;
 }
 .col-start-3 {
   grid-column-start: 3;
-}
-.col-start-1 {
-  grid-column-start: 1;
 }
 .row-start-1 {
   grid-row-start: 1;
@@ -775,9 +775,6 @@ video {
 }
 .mb-auto {
   margin-bottom: auto;
-}
-.ml-5 {
-  margin-left: 1.25rem;
 }
 .block {
   display: block;
@@ -1146,6 +1143,12 @@ video {
   -moz-columns: 3;
        columns: 3;
 }
+.grid-flow-row {
+  grid-auto-flow: row;
+}
+.grid-flow-col {
+  grid-auto-flow: column;
+}
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
@@ -1169,6 +1172,12 @@ video {
 }
 .grid-rows-3 {
   grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+.grid-rows-1 {
+  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 .flex-row {
   flex-direction: row;
@@ -3470,12 +3479,24 @@ aside.open {
     left: 49.25%;
   }
 
+  .md\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .md\:col-start-1 {
+    grid-column-start: 1;
+  }
+
   .md\:row-span-2 {
     grid-row: span 2 / span 2;
   }
 
   .md\:row-start-auto {
     grid-row-start: auto;
+  }
+
+  .md\:row-start-2 {
+    grid-row-start: 2;
   }
 
   .md\:my-28 {
@@ -3567,6 +3588,10 @@ aside.open {
 
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .md\:flex-row {
